--- a/smart_edkit/pubspec.yaml
+++ b/smart_edkit/pubspec.yaml
@@ -1,4 +1,4 @@
-name: smart_edkit
+name: sedkit
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
@@ -23,12 +23,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  firebase_auth: ^0.11.1+10
   firebase: ^5.0.3
-  cloud_firestore: ^0.12.7
-  firebase_database: ^3.0.4
-  flushbar: ^1.8.0
-  shared_preferences: ^0.5.3+4
+  # firebase_auth: ^0.6.6
+  # cloud_firestore: ^0.8.2+3
+  firebase_auth: ^0.7.0
+  cloud_firestore: ^0.8.2+3
+  # cloud_firestore: ^0.12.7+1
+  # firebase_auth: ^0.11.1+12
+  flutter_clean_calendar: ^1.0.1
+  flutter_calendar_carousel: ^1.3.18
+  table_calendar: ^1.2.3
+  sqflite:
+  path_provider:
+  intl:
+  flutter_staggered_grid_view:
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +57,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/images/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
@@ -61,6 +68,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Sans
+      fonts:
+        - asset: assets/fonts/ProductSans-Regular.ttf
+        - asset: assets/fonts/ProductSans-Italic.ttf
+          style: italic
+        - asset: assets/fonts/ProductSans-Bold.ttf
+          weight: 700
   # fonts:
   #   - family: Schyler
   #     fonts:
