--- a/smart_edkit/pubspec.yaml
+++ b/smart_edkit/pubspec.yaml
@@ -26,10 +26,10 @@ dependencies:
   firebase: ^5.0.3
   # firebase_auth: ^0.6.6
   # cloud_firestore: ^0.8.2+3
-  firebase_auth: ^0.7.0
-  cloud_firestore: ^0.8.2+3
-  # cloud_firestore: ^0.12.7+1
-  # firebase_auth: ^0.11.1+12
+  # firebase_auth: ^0.7.0
+  # cloud_firestore: ^0.8.2+3
+  cloud_firestore: ^0.12.7+1
+  firebase_auth: ^0.11.1+12
   flutter_clean_calendar: ^1.0.1
   flutter_calendar_carousel: ^1.3.18
   table_calendar: ^1.2.3
@@ -37,6 +37,11 @@ dependencies:
   path_provider:
   intl:
   flutter_staggered_grid_view:
+  flutter_local_notifications:
+  scheduled_notifications: ^1.0.0
+  url_launcher:
+  firebase_storage: ^3.0.4
+  # android_alarm_manager: ^0.4.1+8
 
 dev_dependencies:
   flutter_test:
